# autoshader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pkgxx.txt  vcpkg.json
cmake/: autoshader.cmake
include/autoshader/: anyarg.h  createpipe.h  pipeline.h
source/: autoshader.cpp  autoshader.h  component.cpp  component.h  descriptorset.cpp  descriptorset.h  descriptorwrite.cpp  descriptorwrite.h  namemap.cpp  namemap.h  pushranges.cpp  pushranges.h  shadersource.cpp  shadersource.h  specializer.cpp  specializer.h  typereflect.cpp  typereflect.h  vertexinput.cpp  vertexinput.h
test/: CMakeLists.txt  any-arg.cpp  array-descriptor.comp  array-descriptor.cpp  create-pipe.cpp  create-pipe.frag  create-pipe.vert  descriptor-set-layout.cpp  descriptor-set-layout.frag  descriptor-set-layout.vert  main.cpp  name-map.cpp  name-map.frag  name-map.vert  push-ranges.cpp  push-ranges.frag  push-ranges.vert  struct-align.comp  struct-align.cpp  vertex-input.cpp  vertex-input.vert
